[gd_scene load_steps=2 format=3 uid="uid://bufnumboes7h3"]

[ext_resource type="Script" path="res://loaders/pause_menu.gd" id="1_0x8n6"]

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_0x8n6")

[node name="layer_main" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="layer_main"]
offset_left = -17.0
offset_top = -7.0
offset_right = 489.0
offset_bottom = 669.0
color = Color(0.380392, 0.380392, 0.380392, 0.333333)

[node name="MarginContainer" type="MarginContainer" parent="layer_main"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1103.0
offset_top = 213.0
offset_right = -705.0
offset_bottom = -225.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="layer_main/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="layer_main/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Paused[/center]"
fit_content = true
autowrap_mode = 0

[node name="unpause" type="Button" parent="layer_main/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Unpause"

[node name="options" type="Button" parent="layer_main/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="exmenu" type="Button" parent="layer_main/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit To Menu"

[node name="exgm" type="Button" parent="layer_main/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="layer_main/MarginContainer/VBoxContainer/unpause" to="." method="_on_unpause_pressed"]
[connection signal="pressed" from="layer_main/MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="layer_main/MarginContainer/VBoxContainer/exmenu" to="." method="_on_exmenu_pressed"]
[connection signal="pressed" from="layer_main/MarginContainer/VBoxContainer/exgm" to="." method="_on_exgm_pressed"]
